update static makefile and gitignore for aplos

--- a/themes/aplos/static/Makefile
+++ b/themes/aplos/static/Makefile
@@ -2,5 +2,8 @@
 install:
 	npm install -g sass
 
+download:
+	wget https://github.com/jgthms/bulma/releases/download/0.9.4/bulma-0.9.4.zip && unzip bulma-0.9.4.zip -d bulma
+
 run:
 	sass --no-source-map sass/mystyles.scss:css/mystyles.css
