--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,4 @@ baseURL = "https://ssd04.github.io/"
 languageCode = "en-us"
 title = "i code ergo sum"
 theme = "aplos"
+tags = ["vim", "philosophy", "coding", "readingbooks"]
