--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,5 @@
-baseURL = "http://localhost:1313"
+baseURL = ""
+relativeURLs = "True"
 languageCode = "en-us"
 title = "i code ergo sum"
 theme = "aplos"
